# Multi-Agent_Financial_Dashboard

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
api/: cache.py  server.py
config/: companies.py  settings.py
data/eval/: convfinqa_results_15.csv  retrieval_eval.jsonl  retrieval_results_full_boost.csv
data/financials/: AAPL_balance_sheet.json  ABBV_balance_sheet.json  ABT_balance_sheet.json  ACN_balance_sheet.json  ADBE_balance_sheet.json  AMD_balance_sheet.json  AMZN_balance_sheet.json  AVGO_balance_sheet.json  BAC_balance_sheet.json  BRK-B_balance_sheet.json  CAT_balance_sheet.json  COST_balance_sheet.json  CRM_balance_sheet.json  CSCO_balance_sheet.json  CVX_balance_sheet.json  DHR_balance_sheet.json  GE_balance_sheet.json  GOOGL_balance_sheet.json  HD_balance_sheet.json  IBM_balance_sheet.json  INTC_balance_sheet.json  INTU_balance_sheet.json  JNJ_balance_sheet.json  JPM_balance_sheet.json  KO_balance_sheet.json  LIN_balance_sheet.json  LLY_balance_sheet.json  MA_balance_sheet.json  MCD_balance_sheet.json  META_balance_sheet.json  MRK_balance_sheet.json  MSFT_balance_sheet.json  NEE_balance_sheet.json  NFLX_balance_sheet.json  NKE_balance_sheet.json  NVDA_balance_sheet.json  ORCL_balance_sheet.json  PEP_balance_sheet.json  PG_balance_sheet.json  PM_balance_sheet.json  (+10 more)
frontend/: package.json
frontend/app/: globals.css  (+2 more)
pipeline/: orchestrator.py
scripts/: build_convfinqa_corpus.py  eval_convfinqa_retrieval.py  eval_retrieval.py  refresh_xbrl.py  run_pipeline.py  test_agents.py  test_retrieval.py
(+43 files in other folders)
